...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Title_text"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/line" />

    <Button
        android:id="@+id/menu_icon"
        android:layout_width="80dp"
        android:layout_height="70dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="253dp"
        android:background="@color/transparent"
...

                </androidx.appcompat.widget.Toolbar>

            </com.google.android.material.appbar.AppBarLayout>

            <EditText
                android:id="@+id/bottleNameField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Bottle Name"
                android:maxLength="64" />

            <EditText
                android:id="@+id/distillerField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Distiller"
                android:maxLength="64" />

            <EditText
                android:id="@+id/spiritTypeField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Spirit Type"
                android:maxLength="64" />

            <EditText
                android:id="@+id/regionField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Region"
                android:maxLength="32" />

            <EditText
                android:id="@+id/ageField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Age (Years)"
                android:inputType="number"
                android:maxLength="16"/>

            <EditText
                android:id="@+id/abvField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="ABV (%)"
                android:inputType="numberDecimal"
                android:maxLength="8" />

            <EditText
                android:id="@+id/ratingField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Rating (1-10)"
                android:inputType="number"
                android:maxLength="8" />

            <EditText
                android:id="@+id/tastingNotesField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:hint="Tasting Notes"
                android:inputType="textMultiLine"
                android:minLines="3"
                android:maxLength="256" />

            <EditText
                android:id="@+id/keywordsField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Keywords (Comma-Separated)"
                android:inputType="text"
                android:maxLength="256" />

...
                android:onClick="onClick"
                android:backgroundTint="@color/gold"
                android:textColor="@color/white"
                android:text="Add Bottle Photo" />

            <Button
                android:id="@+id/saveButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClick"
                android:backgroundTint="@color/gold"
                android:textColor="@color/white"
                android:text="Save Bottle" />
...
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/baseline_home_24" />

        <Button
            android:id="@+id/menu_liquorcab_button"
            android:layout_width="214dp"
            android:layout_height="46dp"
            android:elevation="5dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="75dp"
            android:layout_marginBottom="150dp"
...
