...
    <ImageView
        android:id="@+id/bggallery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleX="1.5"
        android:scaleY="2"
        app:layout_constraintBottom_toBottomOf="@+id/liquorRecycler"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleBG"
        app:srcCompat="@drawable/bg3" />

    <ImageView
...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bg1" />

    <TextView
        android:textIsSelectable="true"
        android:id="@+id/Title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Bottlr"
        android:textColor="@color/black"
        android:textSize="48sp"
        android:fontFamily="@font/downhill"
        android:letterSpacing=".05"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Title_text"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/line" />

    <Button
        android:id="@+id/menu_icon"
        android:layout_width="80dp"
        android:layout_height="70dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="253dp"
        android:background="@color/transparent"
...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/cloud_empty" />

    <ImageButton
        android:id="@+id/search_liquor_button"
        android:layout_width="65dp"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:background="?attr/selectableItemBackground"
        android:elevation="3sp"
...
        android:layout_marginTop="90dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="130dp"
        android:layout_height="128dp"
        android:layout_gravity="bottom|end"
        android:backgroundTint="@color/transparent"
        android:clickable="true"
        android:foreground="@drawable/whiskeyadd"
...
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/baseline_home_24" />

        <Button
            android:id="@+id/menu_liquorcab_button"
            android:layout_width="214dp"
            android:layout_height="46dp"
            android:elevation="5dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="75dp"
            android:layout_marginBottom="150dp"
...
